err/raptus.article.flash.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/ContentTypeValidator'...
Listing './lib/python3.5/site-packages/Products/ContentTypeValidator/i18n'...
Listing './lib/python3.5/site-packages/Products/ContentTypeValidator/locales'...
Listing './lib/python3.5/site-packages/Products/ContentTypeValidator/locales/de'...
Listing './lib/python3.5/site-packages/Products/ContentTypeValidator/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/ContentTypeValidator/locales/es'...
Listing './lib/python3.5/site-packages/Products/ContentTypeValidator/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/ContentTypeValidator/locales/fr'...
Listing './lib/python3.5/site-packages/Products/ContentTypeValidator/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/ContentTypeValidator/tests'...
Listing './lib/python3.5/site-packages/Products/ContentTypeValidator/tests/test_files'...
Listing './lib/python3.5/site-packages/Products.ContentTypeValidator-2.0b4.egg-info'...
Listing './lib/python3.5/site-packages/hexagonit'...
Listing './lib/python3.5/site-packages/hexagonit/swfheader'...
Compiling './lib/python3.5/site-packages/hexagonit/swfheader/__init__.py'...
***   File "./lib/python3.5/site-packages/hexagonit/swfheader/__init__.py", line 94
    print 'Usage: %s [SWF file]' % sys.argv[0]
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hexagonit.swfheader-1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/raptus'...
Listing './lib/python3.5/site-packages/raptus/article'...
Listing './lib/python3.5/site-packages/raptus/article/core'...
Listing './lib/python3.5/site-packages/raptus/article/core/browser'...
Listing './lib/python3.5/site-packages/raptus/article/core/content'...
Listing './lib/python3.5/site-packages/raptus/article/core/locales'...
Listing './lib/python3.5/site-packages/raptus/article/core/locales/de'...
Listing './lib/python3.5/site-packages/raptus/article/core/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/raptus/article/core/locales/en'...
Listing './lib/python3.5/site-packages/raptus/article/core/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/raptus/article/core/locales/fr'...
Listing './lib/python3.5/site-packages/raptus/article/core/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/raptus/article/core/locales/it'...
Listing './lib/python3.5/site-packages/raptus/article/core/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/raptus/article/core/profiles'...
Listing './lib/python3.5/site-packages/raptus/article/core/profiles/default'...
Listing './lib/python3.5/site-packages/raptus/article/core/profiles/default/types'...
Listing './lib/python3.5/site-packages/raptus/article/core/skins'...
Listing './lib/python3.5/site-packages/raptus/article/core/skins/raptus_article_core'...
Compiling './lib/python3.5/site-packages/raptus/article/core/skins/raptus_article_core/article_moveitem.py'...
***   File "./lib/python3.5/site-packages/raptus/article/core/skins/raptus_article_core/article_moveitem.py", line 12
    return context.REQUEST.RESPONSE.redirect('%s#%s' % (context.absolute_url(), anchor))
                                                                                       ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/raptus/article/core/upgrades'...
Listing './lib/python3.5/site-packages/raptus/article/core/upgrades/profiles'...
Listing './lib/python3.5/site-packages/raptus/article/core/upgrades/profiles/10_to_11'...
Listing './lib/python3.5/site-packages/raptus/article/flash'...
Listing './lib/python3.5/site-packages/raptus/article/flash/browser'...
Listing './lib/python3.5/site-packages/raptus/article/flash/content'...
Listing './lib/python3.5/site-packages/raptus/article/flash/i18n'...
Listing './lib/python3.5/site-packages/raptus/article/flash/profiles'...
Listing './lib/python3.5/site-packages/raptus/article/flash/profiles/default'...
Listing './lib/python3.5/site-packages/raptus/article/flash/profiles/default/types'...
Listing './lib/python3.5/site-packages/raptus/article/flash/skins'...
Listing './lib/python3.5/site-packages/raptus/article/flash/skins/raptus_article_flash'...
Listing './lib/python3.5/site-packages/raptus.article.core-2.2.egg-info'...
Listing './lib/python3.5/site-packages/raptus.article.flash-2.0b4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
